Fixed spacing issue

--- a/apps/frontend/src/styling/HamburgerMenu.css
+++ b/apps/frontend/src/styling/HamburgerMenu.css
@@ -14,7 +14,7 @@
   font-family: Arial, sans-serif;
   font-size: 300%;
   font-weight: bold;
-  background-color: #042c5c;
+  background-color: transparent;
   color: #ffffff;
   transition: transform 0.3s ease-in-out;
 }
@@ -25,10 +25,10 @@
 
 .dropdown-menu {
   position: absolute;
-  top: 95%; /* Positioned right at the bottom of the hamburger menu */
+  top: 100%; /* Positioned right at the bottom of the hamburger menu */
   left: 0;
   background-color: #042c5c;
-  width: calc(100vw / 9); /* Match the width of the hamburger-menu container */
+  width: 100%; /* Adjusted to match the parent's width exactly */
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
@@ -36,7 +36,7 @@
 .menu-item {
   padding: 10px;
   font-family: Arial, sans-serif;
-  font-size: 180%;
+  font-size: 100%;
   text-align: center;
 
   display: block;
